# EmbedSLR

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  __init__.py  cli.py  pyproject.toml  setup.cfg
.github/workflows/: docs.yml
biblio/: metrics.py  parser.py
docs/: README.md  index.html
embeddings/: __init__.py  base.py  cohere_api.py  jina_api.py  local_sbert.py  nomic_api.py  openai_api.py
embedslr/: __init__.py  _version.py  bibliometrics.py  cli.py  colab_app.py  colab_app2.py  embeddings.py  wizard.py  wizard2.py
embedslr/embeddings/: __init__.py  base.py  openai_api.py
embedslr/ranking/: __init__.py  ranker.py
embedslr/utils/: __init__.py  batching.py  init.py
examples/: Installation_Google_Colab.md  README.md  biblio_report.txt
examples/results/: biblio_report.txt  topN.csv
io/: scopus.py
ranking/: ranker.py
utils/: batching.py
