[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedslr"
version = "0.0.0.dev0"
description = "Embedding‑based Search/Link/Recommend toolkit"
authors = [{ name = "Twoje Imię", email = "you@example.com" }]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["embedslr", "embedslr.*"]   # ← kluczowe!
